# 2025_Hackathon_Challenge

./: .gitignore  CONTRIBUTING.md  REACT_SETUP_GUIDE.md  README.md
Quilt/: README.md  REORGANIZATION_SUMMARY.md  pyproject.toml
Quilt/circuit_json_processing/: circuit_graph.json  circuit_json_parsing.py  quantum_circuit_visualization.py
Quilt/macro_gate_detector/: MACRO_GATE_DETECTOR_README.md  macro_gate_detector.py
Quilt/macro_gate_detector/tests/: RUN_TESTS.md  test_1_qasm.py  test_3_qasm.py  test_small.py
Quilt/macro_gate_detector/tests/output_test_1/: analysis_result.json
Quilt/my-react-app/public/: circuit-data.json
Quilt/my-react-app/src/: App.jsx  Circuit2.jsx  index.css  main.jsx
macro_gate_detector/: __init__.py
macro_gate_detector/tests/: README.md  __init__.py  test_utils.py
macro_gate_detector/tests/output_test_1/: circuit_graph.json
my-react-app/: package-lock.json  package.json
my-react-app/public/: app-circuit.json
